src/test/deca/context/invalid/decl_class_03.deca
// Description:
//    Teste la déclaration de deux classes de même nom
//
// Resultats:
//    Ligne 12: Il existe déjà une classe de nom A.
//
// Historique:
//    cree le 20/01/2023
class A{
}

class A{
}
